--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    
+
+    <!--  Light  -->
     <color name="primaryColor">#ffab91</color>
     <color name="primaryLightColor">#ffddc1</color>
     <color name="primaryDarkColor">#c97b63</color>
@@ -16,4 +17,14 @@
     <color name="secondaryDarkColor">#bcbcbc</color>
     <color name="primaryTextColor">#000000</color>
     <color name="secondaryTextColor">#000000</color>
+
+    <!--  Dark  -->
+    <color name="primaryColor2">#5d4037</color>
+    <color name="primaryLightColor2">#8b6b61</color>
+    <color name="primaryDarkColor2">#321911</color>
+    <color name="secondaryColor2">#263238</color>
+    <color name="secondaryLightColor2">#4f5b62</color>
+    <color name="secondaryDarkColor2">#000a12</color>
+    <color name="primaryTextColor2">#ffffff</color>
+    <color name="secondaryTextColor2">#ffffff</color>
 </resources>
